# flake8-drf

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
flake8_drf/: constants.py  plugin.py
tests/: test_status_checker.py  views.py
